syntax = "proto3";

package reference;

option go_package = "github.com/monax/hoard/v8/reference";

message Ref {
    bytes Address = 1;
    bytes SecretKey = 2;
    bytes Salt = 3;

    // Version should always have been Type the way it was used (to distinguish a header)
    // unfortunately because version 2 grants rely on JSON serialisation of Ref (for Refs array)
    // We are stuck with this fields while we need to support version 2 grants.
    // Version 3 grants and above use deterministic protobuf serialisation for Refs so have the
    // expected upgrade semantics
    int32 Version = 4;

    enum RefType {
        // Default raw reference containing a body chunk
        BODY = 0;
        // Ref to a header chunk
        HEADER = 1;
        // A ref to a Plaintext of refs
        LINK = 2;
    }
    // Type indicates whether to undergo further decoding
    RefType Type = 5;
    // The size in bytes of the plaintext data
    int64 Size = 6;
}

// Note the Salt here is different to the salt that may have been used to encrypt
// the data pointed to by the reference.
message RefsWithNonce {
    repeated Ref Refs = 1;
    bytes nonce = 2;
}

message Link {
    Ref Header = 1;
    repeated Ref Body = 2;
    Ref Trailer = 3;
}
